Added Ads & Benefits Section

--- a/index.html
+++ b/index.html
@@ -38,15 +38,135 @@
           <button class="btn-login">Log in</button>
         </div>
       </div>
+
     </header>
 
     <!-- Ads -->
-
+    <div class="ads-container d-flex align-items-center">
+      <div class="price-container">
+        <div class="info-container">
+          <div class="info">
+            <div class="rating">
+              <img src="img/Star.svg" alt="Star Rating">
+              <img src="img/Star.svg" alt="Star Rating">
+              <img src="img/Star.svg" alt="Star Rating">
+              <img src="img/Star.svg" alt="Star Rating">
+              <img src="img/Star.svg" alt="Star Rating">
+              <span class="current-rating">5.0</span> 
+              <span class="total-rating">(5.2K+)</span>
+            </div>
+            <div class="title">
+              <span>Padang Restaurant</span>
+            </div>
+            <div class="pricelist">
+              IDR 49.999 - IDR 560.000
+            </div>
+            <div class="location">
+              <img src="img/Location.svg" alt="Location Icon">
+              <span>Padang, Indonesia</span>
+            </div>
+          </div>
+          <div class="cta">
+            <div class="cta-button-container">
+              <button class="cta-button">Make Reservation</button>
+              <img src="img/PathRight.svg" alt="Path Right Icon">
+            </div>
+            <div class="cta-info d-flex align-items-center">
+              <img src="img/Info Square.svg" alt="Square Info Icon">
+              <span class="cta-info-text">No Extra Cost</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="ads-image-container d-flex">
+        <img src="img/image 4.jpg" class="ads-img" alt="Ads Image">
+        <img src="img/image 5.jpg" class="ads-img" alt="Ads Image">
+      </div>
+    </div>
+    
     <!-- Why Us -->
+    <div class="benefits-container d-flex justify-content-center flex-column">
+      <div class="benefits-title-section text-center">
+        <p class="benefits-title">SPECIAL BENEFIT FOR YOU</p>
+        <h4 class="benefits-subtitle">Why Should Choose Us?</h4>
+      </div>
+
+      <div class="benefits-section d-flex justify-content-center">
+        <div class="benefits-card text-center d-flex flex-column">
+          <div class="benefits-icon-container mx-auto">
+            <div class="benefits-icon d-flex align-items-center justify-content-center">
+              <img src="img/Discount.svg" alt="Discount Icon">
+            </div>
+          </div>
+          <div class="benefits-name">Extra Discounts</div>
+          <div class="benefits-description">Get your special discount by using our reservation</div>
+          <div class="benefits-button-active-container d-flex justify-content-center">
+            <button class="benefits-button">
+              View Details
+              <img src="img/PathRight.svg" alt="Path Right Icon">
+            </button>
+          </div>
+        </div>
+
+        <div class="benefits-card text-center d-flex flex-column">
+          <div class="benefits-icon-container mx-auto">
+            <div class="benefits-icon d-flex align-items-center justify-content-center">
+              <img src="img/Forks.svg" alt="Discount Icon">
+            </div>
+          </div>
+          <div class="benefits-name">Come and Eat</div>
+          <div class="benefits-description">Get your own table quickly & without waiting in line</div>
+          <div class="benefits-button-container d-flex justify-content-center">
+            <button class="benefits-button">
+              View Details
+              <img src="img/PathRight.svg" alt="Path Right Icon">
+            </button>
+          </div>
+        </div>
+
+        <div class="benefits-card text-center d-flex flex-column">
+          <div class="benefits-icon-container mx-auto">
+            <div class="benefits-icon d-flex align-items-center justify-content-center">
+              <img src="img/MoneyBag.svg" alt="Discount Icon">
+            </div>
+          </div>
+          <div class="benefits-name">No Extra Fee</div>
+          <div class="benefits-description">Get tax fee if you want to order food and make a reservation</div>
+          <div class="benefits-button-container d-flex justify-content-center">
+            <button class="benefits-button">
+              View Details
+              <img src="img/PathRight.svg" alt="Path Right Icon">
+            </button>
+          </div>
+        </div>
+
+        <div class="benefits-card text-center d-flex flex-column">
+          <div class="benefits-icon-container mx-auto">
+            <div class="benefits-icon d-flex align-items-center justify-content-center">
+              <img src="img/Blink.svg" alt="Discount Icon">
+            </div>
+          </div>
+          <div class="benefits-name">Guaranteed Cleanliness</div>
+          <div class="benefits-description">We ensure the cleanliness of the place as well the food</div>
+          <div class="benefits-button-container d-flex justify-content-center">
+            <button class="benefits-button">
+              View Details
+              <img src="img/PathRight.svg" alt="Path Right Icon">
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Popular Restaurant -->
+    <div class="popular-container">
+      
+    </div>
 
     <!-- Based on Location Restaurant -->
+    <div class="location-container">
+
+    </div>
 
     <!-- Expert Chef -->
   </div>
