Added Popular Restaurant Section

--- a/index.html
+++ b/index.html
@@ -159,8 +159,56 @@
     </div>
 
     <!-- Popular Restaurant -->
-    <div class="popular-container">
-      
+    <div class="popular-container d-flex align-items-center justify-content-center">
+      <div class="popular-info">
+        <div class="popular-data">
+          <div class="popular-title-wrapper">
+            <div class="popular-rank">
+              TOP 3 FEATURED RESTAURANT
+            </div>
+            <div class="popular-title">
+              Most Popular Restaurants
+            </div>
+          </div>
+          <div class="popular-description">
+            The best restaurant in our opinion is how much customers like in terms of place, price, comfort, and of course the taste of food itself
+          </div>
+        </div>
+        <div class="popular-button-container">
+          <button class="popular-button">View All Restaurant</button>
+          <img src="img/PathRight.svg" alt="Path Right Icon">
+        </div>
+      </div>
+      <div class="popular-image d-flex justify-content-center">
+        <div class="popular-large-image">
+          <img src="img/image 6.jpg" class="popular-img" alt="Popular Cafe">
+          <div class="popular-pricelist d-flex align-items-center">
+            <div class="popular-pricelist-info">
+              <div class="rating">
+                <img src="img/Star.svg" alt="Star Rating">
+                <span class="current-rating">5.0</span> 
+                <span class="total-rating">(5.2K+)</span>
+              </div>
+              <span class="popular-restaurant-name">
+                Bind balorant
+              </span>
+              <div class="location">
+                <img src="img/Location.svg" alt="Location Icon">
+                <span>Padang, Indonesia</span>
+              </div>
+            </div>
+            <div class="popular-pricelist-icon d-flex justify-content-center">
+              <img src="img/Arrow-Right.svg" alt="Arrow Right Direction">
+            </div>
+          </div>
+        </div>
+        <div class="popular-small-image">
+          <img src="img/image 7.jpg" class="popular-img" alt="Popular Cafe">
+        </div>
+        <div class="popular-small-image">
+          <img src="img/image 8.jpg" class="popular-img" alt="Popular Cafe">
+        </div>
+      </div>
     </div>
 
     <!-- Based on Location Restaurant -->
