Added Based on Location Section and Half of Expert Chef Section

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               </span>
               <div class="location">
                 <img src="img/Location.svg" alt="Location Icon">
-                <span>Padang, Indonesia</span>
+                <span>Jakarta, Indonesia</span>
               </div>
             </div>
             <div class="popular-pricelist-icon d-flex justify-content-center">
@@ -213,10 +213,146 @@
 
     <!-- Based on Location Restaurant -->
     <div class="location-container">
+      <div class="location-title-container d-flex align-items-center justify-content-between">
+        <div class="location-title-wrapper">
+          <div class="location-rank">
+            RESTAURANT BASED BY CITY
+          </div>
+          <div class="location-title">
+            Restaurant Near You
+          </div>
+        </div>
 
+        <div class="location-restaurant-wrapper">
+          <div class="location-restaurant">
+            <img src="img/Location.svg" alt="Location Icon">
+            <span class="location-restaurant-text">Jakarta, Indonesia</span>
+            <img src="img/Path.svg" alt="Dropdown">
+          </div>
+        </div>
+      </div>
+
+      <div class="restaurant-container d-flex justify-content-center">
+        <div class="restaurant">
+          <img class="restaurant-img" src="img/image 9.jpg" alt="Image">
+          <div class="restaurant-price d-flex align-items-center">
+            <div class="restaurant-price-info">
+              <div class="rating">
+                <img src="img/Star.svg" alt="Star Rating">
+                <span class="current-rating">5.0</span> 
+                <span class="total-rating">(6.6K+)</span>
+              </div>
+              <span class="popular-restaurant-name">
+                Batavia Restaurant
+              </span>
+              <div class="restaurant-pricelist">
+                IDR 29.000 - IDR 259.999
+              </div>
+            </div>
+            <div class="restaurant-price-icon d-flex align-items-center justify-content-center">
+              <img src="img/Arrow-Right.svg" alt="Arrow Right Direction">
+            </div>
+          </div>
+        </div>
+
+        <div class="restaurant">
+          <img class="restaurant-img" src="img/image 10.jpg" alt="Image">
+          <div class="restaurant-price d-flex align-items-center">
+            <div class="restaurant-price-info">
+              <div class="rating">
+                <img src="img/Star.svg" alt="Star Rating">
+                <span class="current-rating">5.0</span> 
+                <span class="total-rating">(3.6K+)</span>
+              </div>
+              <span class="popular-restaurant-name">
+                Split Ascent Restaurant
+              </span>
+              <div class="restaurant-pricelist">
+                IDR 49.999 - IDR 560.000
+              </div>
+            </div>
+            <div class="restaurant-price-icon d-flex align-items-center justify-content-center">
+              <img src="img/Arrow-Right.svg" alt="Arrow Right Direction">
+            </div>
+          </div>
+        </div>
+
+        <div class="restaurant">
+          <img class="restaurant-img" src="img/image 11.jpg" alt="Image">
+          <div class="restaurant-price d-flex align-items-center">
+            <div class="restaurant-price-info">
+              <div class="rating">
+                <img src="img/Star.svg" alt="Star Rating">
+                <span class="current-rating">5.0</span> 
+                <span class="total-rating">(11K+)</span>
+              </div>
+              <span class="popular-restaurant-name">
+                Daza Fracture Restaurant
+              </span>
+              <div class="restaurant-pricelist">
+                IDR 29.999 - IDR 560.000
+              </div>
+            </div>
+            <div class="restaurant-price-icon d-flex align-items-center justify-content-center">
+              <img src="img/Arrow-Right.svg" alt="Arrow Right Direction">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="d-flex justify-content-center">
+        <div class="location-restaurant-container">
+            <button class="location-restaurant-button">View All Restaurant</button>
+            <img src="img/PathRight.svg" alt="Path Right Icon">
+        </div>
+      </div>
     </div>
 
     <!-- Expert Chef -->
+    <div class="expert-chef-container d-flex justify-content-center">
+      <div class="chef-image-container d-flex justify-content-center">
+        <div class="chef-image">
+          <img src="img/image 12.jpg" class="chef-img" alt="Chef">
+        </div>
+
+        <div class="chef-experience text-center">
+          <div class="logo-experience mx-auto">
+            <img src="img/Shield Done.svg" alt="Shield Done">
+          </div>
+          <div class="experience-text d-flex flex-column text-center">
+            <span class="experience-year">12 Years</span>
+            Experience
+          </div>
+        </div>
+        <div class="chef-workplace d-flex align-items-center">
+          <div class="workplace-image">
+            <img src="img/image 13.jpg" class="workplace-img" alt="Workplace">
+          </div>
+          <div class="workplace-info">
+            <div class="workplace-title">Chef at restaurant:</div>
+            <div class="workplace-place">Pearl Dolphin</div>
+            <div class="workplace-details">
+              View Details
+              <img src="img/PathRight.svg" alt="Path Right Icon">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="chef-info-container">
+        <!-- <div class="chef-info-title">TOP 4 EXPERT CHEFS</div>
+        <div class="chef-info-subtitle">Expert Chefs In Fuddy</div>
+
+        <div class="chef-info-block d-flex align-items-center justify-content-between ">
+          <div class="chef-info">
+            <div class="chef-info-food-type">PIZZA</div>
+            <div class="chef-info-name">Phoenix Satcheup</div>
+            <div class="chef-info-place">Jakarta</div>
+          </div>
+          <div class="chef-details">Profile Details Arrow</div>
+        </div> -->
+      </div>
+    </div>
   </div>
 </body>
 </html>
