Finished Expert Chef Section

--- a/index.html
+++ b/index.html
@@ -340,18 +340,65 @@
       </div>
 
       <div class="chef-info-container">
-        <!-- <div class="chef-info-title">TOP 4 EXPERT CHEFS</div>
+        <div class="chef-info-title">TOP 4 EXPERT CHEFS</div>
         <div class="chef-info-subtitle">Expert Chefs In Fuddy</div>
 
-        <div class="chef-info-block d-flex align-items-center justify-content-between ">
+        <div class="chef-info-block-active d-flex align-items-center justify-content-between ">
           <div class="chef-info">
             <div class="chef-info-food-type">PIZZA</div>
             <div class="chef-info-name">Phoenix Satcheup</div>
-            <div class="chef-info-place">Jakarta</div>
+            <div class="chef-info-place">
+              <img src="img/Location.svg" alt="Location Icon">
+              Jakarta, Indonesia
+            </div>
           </div>
-          <div class="chef-details">Profile Details Arrow</div>
-        </div> -->
+          <div class="chef-details">
+            Profile Details
+            <img src="img/PathRightColored.svg" class="chef-path-right" alt="Path Right Icon">
+          </div>
+        </div>
+
+        <div class="chef-info-block d-flex align-items-center justify-content-between ">
+          <div class="chef-info">
+            <div class="chef-info-food-type">VEGAN</div>
+            <div class="chef-info-name">Chamber Botfrag</div>
+            <div class="chef-info-place">
+              <img src="img/LocationBlack.svg" class="black" alt="Location Icon">
+              Bandung, Indonesia
+            </div>
+          </div>
+        </div>
+
+        <div class="chef-info-block d-flex align-items-center justify-content-between ">
+          <div class="chef-info">
+            <div class="chef-info-food-type">ROAST CHICKEN</div>
+            <div class="chef-info-name">Asep Vandal</div>
+            <div class="chef-info-place">
+              <img src="img/LocationBlack.svg" alt="Location Icon">
+              Sunda, Indonesia
+            </div>
+          </div>
+        </div>
+
+        <div class="chef-info-block d-flex align-items-center justify-content-between ">
+          <div class="chef-info">
+            <div class="chef-info-food-type">BEEF STEAK</div>
+            <div class="chef-info-name">I Made Invoker</div>
+            <div class="chef-info-place">
+              <img src="img/LocationBlack.svg" alt="Location Icon">
+              Bali, Indonesia
+            </div>
+          </div>
+        </div>
+
+        <div class="chef-button-container">
+          <button class="chef-button">
+            View All Chefs
+            <img src="img/PathRight.svg" alt="Path Right Icon">
+          </button>
+        </div>
       </div>
+
     </div>
   </div>
 </body>
