--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <span>Jakarta, Indonesia</span>
               </div>
             </div>
-            <div class="popular-pricelist-icon d-flex justify-content-center">
+            <div class="popular-pricelist-icon d-flex align-items-center justify-content-center">
               <img src="img/Arrow-Right.svg" alt="Arrow Right Direction">
             </div>
           </div>
